# LearnOpengl

./: CMakeLists.txt  Camera.h  Main.cpp  Shader.h  glad.c  main.cpp  shader.frag  shader.vs
ModelDrawer/: mesh.h  model.h
include/glad/: glad.h
lib/: SOIL.lib  glfw3.lib
